--- a/vscode_settings.json
+++ b/vscode_settings.json
@@ -1,11 +1,36 @@
-{    
-    "editor.rulers": [90, 120],
-    "workbench.colorCustomizations": {
-        "editorRuler.foreground": "#9421ff"
-    },
-    "editor.renderWhitespace": "boundary",
-    "window.zoomLevel": 0,
-    "emmet.includeLanguages": {
-        "javascript": "javascriptreact"
-    }
+{
+  "editor.rulers": [106],
+  "workbench.colorCustomizations": {
+    "editorRuler.foreground": "#9421ff"
+  },
+  "editor.renderWhitespace": "boundary",
+  "editor.fontWeight": "bold",
+  "window.zoomLevel": 1,
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+  },
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true
+  },
+  "blade.format.enable": true,
+  "workbench.iconTheme": "material-icon-theme",
+  "workbench.colorTheme": "BeardedTheme Black & Amethyst",
+  "material-icon-theme.folders.associations": {
+    "infra": "app",
+    "entities": "class",
+    "schemas": "class",
+    "typeorm": "database",
+    "repositories": "mappings",
+    "http": "container",
+    "migrations": "tools",
+    "modules": "components",
+    "implementations": "core",
+    "dtos": "typescript",
+    "fakes": "mock"
+  },
+  "material-icon-theme.files.associations": {
+    "ormconfig.json": "database",
+    "tsconfig.json": "tune"
+  },
+  "material-icon-theme.folders.color": "#42a5f5"
 }
