--- a/vscode_settings.json
+++ b/vscode_settings.json
@@ -1,5 +1,5 @@
 {
-  "editor.rulers": [106],
+  "editor.rulers": [90, 120],
   "workbench.colorCustomizations": {
     "editorRuler.foreground": "#9421ff"
   },
@@ -32,5 +32,6 @@
     "ormconfig.json": "database",
     "tsconfig.json": "tune"
   },
-  "material-icon-theme.folders.color": "#42a5f5"
+  "material-icon-theme.folders.color": "#42a5f5",
+  "explorer.compactFolders": false
 }
