all settings fix problems on save file

--- a/vscode_settings.json
+++ b/vscode_settings.json
@@ -10,7 +10,12 @@
     "javascript": "javascriptreact"
   },
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    // For ESLint
+    "source.fixAll.eslint": true,
+    // For TSLint
+    "source.fixAll.tslint": true,
+    // For Stylelint
+    "source.fixAll.stylelint": true,
   },
   "blade.format.enable": true,
   "workbench.iconTheme": "material-icon-theme",
