--- a/vscode_settings.json
+++ b/vscode_settings.json
@@ -3,8 +3,6 @@
   "workbench.colorCustomizations": {
     "editorRuler.foreground": "#9421ff"
   },
-  "editor.renderWhitespace": "boundary",
-  "editor.fontWeight": "bold",
   "window.zoomLevel": 1,
   "emmet.includeLanguages": {
     "javascript": "javascriptreact"
@@ -41,4 +39,7 @@
   "explorer.compactFolders": false,
   "editor.bracketPairColorization.enabled": true,
   "editor.guides.bracketPairs": "active",
+  "workbench.tree.indent": 14,
+  "editor.renderWhitespace": "boundary",
+  "editor.fontWeight": "bold"
 }
