--- a/conky.conf
+++ b/conky.conf
@@ -10,4 +10,5 @@ conky.config = {
 
 conky.text = [[
 ${color grey}CPU Usage:$color ${acpitemp}°C $cpu% ${cpubar 4}
+${color grey}Nvidia:$color ${execi 60 nvidia-smi --query-gpu=temperature.gpu --format=csv,noheader} °C - ${execi 60 nvidia-smi --query-gpu=memory.used --format=csv,noheader}/${execi 60 nvidia-smi --query-gpu=memory.total --format=csv,noheader}
 ]]
